Fix .field-name-download-button text-align

--- a/docroot/sites/all/themes/ialp/sass/components/_node-full.scss
+++ b/docroot/sites/all/themes/ialp/sass/components/_node-full.scss
@@ -1,7 +1,7 @@
 /* articles, blogs, events and resources content type */
 
 .field-name-download-button, .region-sidebar-first .field-name-field-link {
-   text-align: center;
+   text-align: left;
    margin: 1em 0;
 }
 .download, .region-sidebar-first .field-name-field-link .field-item a {
